--- a/src/app/product/product.component.html
+++ b/src/app/product/product.component.html
@@ -1,5 +1,5 @@
 <div class="col-md-3 col-sm-6 product-item">
-  <div class="thumbnail">
+  <div class="thumbnail" [ngClass]="{ last: data.stock === 1 }">
     <img [src]="data.photo" alt="" />
     <div class="caption">
       <h3>{{ data.title }} - {{ data.price }}$</h3>
