♻️ Creates services to handle data consume by components

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,8 +2,8 @@
 
 <div class="container">
   <header class="jumbotron hero-spacer">
-    <h1>Welcome to Zenika E-Shop</h1>
-    <p>Your basket amounts to {{ total }}$</p>
+    <h1>{{ title }}</h1>
+    <p>Your basket amounts to {{ getTotal() }}$</p>
     <p><a class="btn btn-primary btn-large">See my basket</a></p>
   </header>
 
