--- a/src/app/product/product.component.html
+++ b/src/app/product/product.component.html
@@ -2,7 +2,7 @@
   <div class="thumbnail" [ngClass]="{ last: data.stock === 1 }">
     <img [src]="data.photo" alt="" />
     <div class="caption">
-      <h3>{{ data.title }} - {{ data.price }}$</h3>
+      <h3>{{ data.title | uppercase }} - {{ data.price | currency: 'CAD':'symbol':'1.2-2' }}</h3>
       <p>{{ data.description }}</p>
       <p>
         <button class="btn btn-primary" (click)="addToBasketClick()">
