✨ Pass property to sort onto as pipe parameter

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -15,7 +15,7 @@
     </div>
   </div>
   <div class="row text-center">
-    <ng-container *ngFor="let product of products | sort">
+    <ng-container *ngFor="let product of products | sort: 'title'">
       <app-product *ngIf="isAvailable(product)" [data]="product" (addToBasket)="updatePrice($event)"></app-product>
     </ng-container>
   </div>
