✨ Choose on which property to sort

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -12,10 +12,16 @@
   <div class="row">
     <div class="col-lg-12">
       <h2>Last products</h2>
+      Triez par :
+      <div class="btn-group" role="group">
+        <button class="btn btn-default" (click)="sortKey = 'title'">Title</button>
+        <button class="btn btn-default" (click)="sortKey = 'price'">Prix</button>
+        <button class="btn btn-default" (click)="sortKey = 'stock'">Stock</button>
+      </div>
     </div>
   </div>
   <div class="row text-center">
-    <ng-container *ngFor="let product of products | sort: 'title'">
+    <ng-container *ngFor="let product of products | sort: sortKey">
       <app-product *ngIf="isAvailable(product)" [data]="product" (addToBasket)="updatePrice($event)"></app-product>
     </ng-container>
   </div>
