--- a/src/app/product/product.component.html
+++ b/src/app/product/product.component.html
@@ -1,5 +1,5 @@
 <div class="col-md-3 col-sm-6 product-item">
-  <div class="thumbnail" [ngClass]="{ last: data.stock === 1 }">
+  <div class="thumbnail" [ngClass]="{ last: isTheLast() }">
     <img [src]="data.photo" alt="product description" (click)="goToProductDetail()" />
     <div class="caption">
       <h3>{{ data.title | uppercase }} - {{ data.price | currency: 'CAD':'symbol':'1.2-2' }}</h3>
